upload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test
  strategy:
    type: RollingUpdate  
    rollingUpdate:
      maxUnavailable: 1  
      maxSurge: 1  
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: test
        image: zihrueiliou/uploadimg:v1.0.0
        ports:
        - containerPort: 5000  
        resources: {}
        volumeMounts:
        - mountPath: /code/app/static/images
          name: pv-storage
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: pv-storage
        persistentVolumeClaim:
          claimName: upload-pvc
