upload-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upload-service
spec:
  selector:
    app: upload
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 5000
  type: LoadBalancer
